force-app/main/default/objects/PeriodClose__c/PeriodClose__c.object-meta.xml
<CustomObject>
    <label>Period Close</label>
    <nameField>
        <label>Period Close Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Period Close</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>