force-app/main/default/objects/PeriodClose__c/fields/ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>ClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PeriodClose_ClosedBy</relationshipName>
    <type>Lookup</type>
</CustomField>