force-app/main/default/objects/PeriodClose__c/fields/EntryDeadline__c.field-meta.xml
<CustomField>
    <fullName>EntryDeadline__c</fullName>
    <description>입력 마감일</description>
    <label>Entry Deadline</label>
    <type>Date</type>
</CustomField>