force-app/main/default/objects/PeriodClose__c/fields/Originatedby__c.field-meta.xml
<CustomField>
    <fullName>Originatedby__c</fullName>
    <label>(X)Originated by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LK_KR</fullName>
            </value>
            <value>
                <fullName>LK_VN</fullName>
            </value>
            <value>
                <fullName>LK_Re</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>