force-app/main/default/objects/PeriodClose__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>EntryDeadline__c</columns>
    <columns>Originatedby__c</columns>
    <columns>ClosedBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>